--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -1,6 +1,5 @@
 name: Firebase Manual Deploy
 
-# This allows you to trigger the workflow manually
 on:
   workflow_dispatch:
 
@@ -11,11 +10,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Install Firebase Tools
-        run: npm install -g firebase-tools
-
       - name: Deploy to Firebase
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: |
-          firebase deploy --only hosting
+        uses: FirebaseExtended/action-hosting-deploy@v1.5.0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_TOKEN }}
+          channelId: https://slims-official-website.web.app/
