--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -6,13 +6,18 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Deploy to Firebase
-        uses: FirebaseExtended/action-hosting-deploy@v1.5.0
+      - name: Deploy to Firebase Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v1
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
+
           firebaseServiceAccount: ${{ secrets.FIREBASE_TOKEN }}
-          channelId: slims-official-website.web.app
+
+          projectId: YOUR_FIREBASE_PROJECT_ID
+
+          public: firebase/public
