--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -8,25 +8,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repo
+      # Step 1: Checkout your repo
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      # Step 2: Deploy to Firebase Hosting
+      # Step 2: Deploy to Firebase Hosting using service account JSON
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          # GitHub token for Actions
           repoToken: ${{ secrets.GITHUB_TOKEN }}
 
-          # Firebase service account JSON (base64 encoded)
-          firebaseServiceAccount: ${{ secrets.FIREBASE_TOKEN }}
+          # Use your service account JSON secret
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_TOKEN }}
 
           # Your Firebase project ID
           projectId: slims-official-website
 
-          # Path to the folder containing firebase.json
+          # Folder containing firebase.json and public/
           entryPoint: Firebase
 
-          # Optional: preview channel (remove for live deployment)
-          #channelId: staging
+          # Optional: remove or comment out for production live deployment
+          # channelId: staging
