Update Firebase deploy workflow name to reflect deprecation

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -1,4 +1,4 @@
-name: Firebase Manual Deploy
+name: Old Firebase Hosting Deploy (`--token` IS DEPRECATED AND WILL SOON BE REMOVED)
 
 on:
   workflow_dispatch:
